adding padding as a feature. fixed a bug on percentile normalization, and fixed a bug on Random Crop transformation

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__
 *.pyc
 *.idea
 *.DS_Store
-
+tmp*
 # data which is automatically downloaded inside notebooks
 notebooks/ExBox3
 notebooks/MedNIST.tar.gz
